--- a/trunk/MvvmContribTest/MvvmContribTest.csproj
+++ b/trunk/MvvmContribTest/MvvmContribTest.csproj
@@ -59,7 +59,12 @@
     <Compile Include="..\MvvmTest\PropertyChangedCounter.cs">
       <Link>PropertyChangedCounter.cs</Link>
     </Compile>
+    <Compile Include="ApiTests\ViewModels\Selection\Domain\Department.cs" />
+    <Compile Include="ApiTests\ViewModels\Selection\SingleSelectionTests.cs" />
+    <Compile Include="ApiTests\ViewModels\Selection\SimpleSingleSelectionTests.cs" />
     <Compile Include="ApiTests\ViewModels\Selection\MultiSelectionTests.cs" />
+    <Compile Include="ApiTests\ViewModels\Selection\SimpleMultiSelectionTests.cs" />
+    <Compile Include="ApiTests\ViewModels\Selection\VMs\DepartmentVM.cs" />
     <Compile Include="AssertHelper.cs" />
     <Compile Include="Bootstrapper.cs" />
     <Compile Include="Common\SaveDiscardVMTest.cs" />
