--- a/trunk/Mvvm/Mvvm.csproj
+++ b/trunk/Mvvm/Mvvm.csproj
@@ -152,12 +152,6 @@
     <Compile Include="ViewModels\Core\VMDescriptorBuilder\Behaviors\VMBehaviorBuilder.cs" />
     <Compile Include="ViewModels\Core\VMDescriptorBuilder\ConfigurationProvider.cs" />
     <Compile Include="ViewModels\Core\VMDescriptorBuilder\IVMDescriptorBuilder.new.cs" />
-    <Compile Include="ViewModels\Core\VMDescriptorBuilder\Properties\- Legacy -\VMPropertyFactoryLocal.cs" />
-    <Compile Include="ViewModels\Core\VMDescriptorBuilder\Properties\- Legacy -\VMCollectionPropertyFactory.cs" />
-    <Compile Include="ViewModels\Core\VMDescriptorBuilder\Properties\- Legacy -\VMCollectionPropertyFactoryWithSource.cs" />
-    <Compile Include="ViewModels\Core\VMDescriptorBuilder\Properties\- Legacy -\VMPropertyFactory.cs" />
-    <Compile Include="ViewModels\Core\VMDescriptorBuilder\Properties\- Legacy -\VMPropertyFactoryBase.cs" />
-    <Compile Include="ViewModels\Core\VMDescriptorBuilder\Properties\- Legacy -\VMPropertyFactoryWithSource.cs" />
     <Compile Include="ViewModels\Core\VMDescriptorBuilder\Properties\Interfaces\IPopulatedCollectionPropertyBuilder.cs" />
     <Compile Include="ViewModels\Core\VMDescriptorBuilder\Properties\VMPropertyBuilder.cs" />
     <Compile Include="ViewModels\Core\VMDescriptorBuilder\Properties\VMPropertyFactory.cs" />
@@ -293,16 +287,14 @@
     <Compile Include="ViewModels\Core\ChangeValueRequest.cs" />
     <Compile Include="ViewModels\IVMValueConverter.cs" />
     <Compile Include="ViewModels\Core\VMDescriptorBuilder\IVMBehaviorConfigurator.cs" />
-    <Compile Include="ViewModels\Core\VMDescriptorBuilder\IVMDescriptorBuilder.cs" />
     <Compile Include="ViewModels\Core\VMDescriptorBuilder\IVMPropertyBuilderProvider.cs" />
-    <Compile Include="ViewModels\Core\VMDescriptorBuilder\IVMDependencyConfigurator.cs" />
+    <Compile Include="ViewModels\Core\VMDescriptorBuilder\Dependencies\Interfaces\IVMDependencyConfigurator.cs" />
     <Compile Include="ViewModels\Core\VMDescriptorBuilder\IVMPropertyFactory.cs" />
     <Compile Include="ViewModels\ViewModel.cs" />
     <Compile Include="ViewModels\VMCollection.cs" />
     <Compile Include="ViewModels\- No Namespace -\VMDescriptor.cs" />
     <Compile Include="ViewModels\- No Namespace -\VMDescriptorBuilder.cs" />
     <Compile Include="ViewModels\VMProperty.cs" />
-    <Compile Include="ViewModels\Core\VMDescriptorBuilder\- Legacy -\VMPropertyFactory.cs" />
     <Compile Include="Views\Binder\BinderBuildStep.cs" />
     <Compile Include="Views\Binder\BinderBuildStepRegistry.cs" />
     <Compile Include="Views\Binder\BinderContext.cs" />
