--- a/trunk/MvvmTest/MvvmTest.csproj
+++ b/trunk/MvvmTest/MvvmTest.csproj
@@ -139,6 +139,7 @@
     <Compile Include="ViewModels\IntegrationTests\StandardValidationsTest.cs" />
     <Compile Include="ViewModels\IntegrationTests\ValidationTest2.cs" />
     <Compile Include="ViewModels\IntegrationTests\ValidationTest.cs" />
+    <Compile Include="ViewModels\PropertyTypeHelperTests.cs" />
     <Compile Include="ViewModels\TempTests\CollectionPropertyTest.cs" />
     <Compile Include="ViewModels\TestBase.cs" />
     <Compile Include="ViewModels\TestVM.cs" />
