--- a/trunk/Mvvm/Mvvm.csproj
+++ b/trunk/Mvvm/Mvvm.csproj
@@ -255,7 +255,7 @@
     <Compile Include="ViewModels\IHasSourceObject.cs" />
     <Compile Include="ViewModels\IViewModel.cs" />
     <Compile Include="ViewModels\IVMContext.cs" />
-    <Compile Include="ViewModels\IVMProperty.cs" />
+    <Compile Include="ViewModels\- No Namespace -\IVMProperty.cs" />
     <Compile Include="ViewModels\LegacyPropertyFactoryMethodExtensions.cs" />
     <Compile Include="ViewModels\StandardBehaviors.cs" />
     <Compile Include="ViewModels\StandardValidations.cs" />
